tests/baselines/reference/abstractPropertyInConstructor.errors.txt
tests/cases/compiler/abstractPropertyInConstructor.ts(4,24): error TS2715: Abstract property 'prop' in class 'AbstractClass' cannot be accessed in the constructor.
tests/cases/compiler/abstractPropertyInConstructor.ts(7,18): error TS2715: Abstract property 'prop' in class 'AbstractClass' cannot be accessed in the constructor.
tests/cases/compiler/abstractPropertyInConstructor.ts(9,14): error TS2715: Abstract property 'cb' in class 'AbstractClass' cannot be accessed in the constructor.


==== tests/cases/compiler/abstractPropertyInConstructor.ts (3 errors) ====
    abstract class AbstractClass {
        constructor(str: string) {
            this.method(parseInt(str));
            let val = this.prop.toLowerCase();
                           ~~~~
!!! error TS2715: Abstract property 'prop' in class 'AbstractClass' cannot be accessed in the constructor.
    
            if (!str) {
                this.prop = "Hello World";
                     ~~~~
!!! error TS2715: Abstract property 'prop' in class 'AbstractClass' cannot be accessed in the constructor.
            }
            this.cb(str);
                 ~~
!!! error TS2715: Abstract property 'cb' in class 'AbstractClass' cannot be accessed in the constructor.
    
            const innerFunction = () => {
                return this.prop;
            }
        }
    
        abstract prop: string;
        abstract cb: (s: string) => void;
    
        abstract method(num: number): void;
    
        method2() {
            this.prop = this.prop + "!";
        }
    }
    